# saas-restaurant

./: .dockerignore  .env.example  .env.test  .gitignore  DOCKER_BEST_PRACTICES.md  Makefile  README.md  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  fix-build.sh  package.json  renovate.json  skills-lock.json  tsconfig.base.json  turbo.json
.atl/: skill-registry.md
.github/workflows/: ci.yml  deploy.yml
.tmp-docker-seed/: reseed-users.ts
admin/: boneyard.config.json  package.json  serve.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
admin/src/: root.tsx  router.tsx
api/: .env.test  jest-e2e.config.ts  jest.config.ts  package.json  prisma.config.js  prisma.config.ts  test-admin.js  tsconfig.json
api/prisma/: schema.prisma  seed.ts
api/src/: app.module.ts  main.ts
app/: boneyard.config.json  package.json  serve.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: root.tsx  router.d.ts  router.tsx
apps/admin/: Dockerfile  package.json  serve.mjs  tsconfig.json  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: PLAN-SEGUIMIENTO.md
landing/: astro.config.mjs  package.json  tsconfig.json
mobile/: package.json  tsconfig.json
nginx/: nginx.conf  nginx.prod.conf  nginx.prod.conf.template
print-agent/: package.json  tsconfig.json
scripts/: check-env-sync.mjs  dev.ps1  dev.sh  enhance-hero.mjs  entrypoint-api.sh  fix-hero-css.mjs  generate-landing.mjs  init.sql  reseed.ts  wait-for-api.mjs
(+717 files in other folders)
