[package]
name = "saas-restaurant-pos"
version = "0.1.0"
description = "SaaS Restaurant — POS Desktop"
authors = [""]
edition = "2021"

[lib]
name = "saas_restaurant_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
